...
        }
      }
    },
    "%lld" : {

    },
    "72" : {

    },
    "911" : {

    },
    "advice_elevated" : {
...
    "app_name" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "CORDIS"
          }
        },
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "CORDIS"
...
    },
    "common_done" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Listo"
...
